remove unnecessary whitespace and add comment in home.css

--- a/home.css
+++ b/home.css
@@ -1288,7 +1288,8 @@ background: #fff;
   font-size: 48px;
   color: #000;
   font-family: Aclonica;
-}
+} 
+/* hdhdh */
 
 /* .faq{
   margin-top: -195.6px;
